--- a/app/views/welcome/_app_deployment_table.html.erb
+++ b/app/views/welcome/_app_deployment_table.html.erb
@@ -38,9 +38,9 @@
                         <% else %>
                             <%= row[:uuid_name] %>
                         <% end %>
-                        <button class="btn btn-default btn-sm" style="float: right" id="<%= row[:war_uuid] %>" data-uuid_name="<%= row[:uuid_name] %>" onclick="greg(this)">Rename</button>
+                        <button class="btn btn-default btn-sm" style="float: right" id="<%= row[:war_uuid] %>" data-uuid_name="<%= row[:uuid_name] %>" onclick="renameDeployment(this)">Rename</button>
                     <% else %>
-                        <button class="btn btn-default btn-sm" style="float: right" id="<%= row[:war_uuid] %>" data-uuid_name="<%= row[:uuid_name] %>" onclick="greg(this)">Set Name</button>
+                        <button class="btn btn-default btn-sm" style="float: right" id="<%= row[:war_uuid] %>" data-uuid_name="<%= row[:uuid_name] %>" onclick="renameDeployment(this)">Set Name</button>
                     <% end %>
                 <% else %>
                     N/A
@@ -88,30 +88,61 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn_submit_form">Rename Application</button>
+        <button type="button" class="btn btn-primary" id="btn_submit_form" onclick="submitRenameDeployment();">Rename Application</button>
       </div>
       <div class="modal-body" style="overflow:auto; max-height: 70vh;"><!-- style is for scrollable div -->
-        <label for="war_name">Application Name</label>
-        <input type="text" name="war_name" id="war_name"/>
+        <label for="war_name">Application Name:</label>
+        <input type="text" name="war_name" id="war_name" size="500" required/>
       </div>
     </div>
   </div>
 </div>
 
 <script type="text/javascript" charset="utf-8">
-    function greg(elem) {
-//        turn off polling
+    function check_awaiting_poll_results() {
+        return awaiting_poll_results;
+    }
+
+    function submitRenameDeployment() {
+        var input = $('#war_name');
+        var war_name = $.trim(input.val());
+
+        if (war_name.length > 0) {
+            $.getJSON(gon.routes.rename_war_path, {uuid: $(input).data('uuid'), war_name: war_name}, function () {
+                alert('returned from ajax');
+                // update the name for the row or let polling handle it?
+
+                $('#warNameModal').modal('hide');
+            });
+        } else {
+            alert('Please enter an application name before attempting to rename the application.');
+            input.focus();
+            return false;
+        }
+    }
+
+    function renameDeployment(elem) {
+        // turn off polling
+        if (awaiting_poll_results) {
+            console.log("awaiting poll results....");
+            setTimeout(renameDeployment, 250, arguments);
+            return false;
+        }
+
+        // if we get here then we are not currently polling so unregister the polling to prevent issues with the modal
+        polling.unregisterPolling(polling.pollEnum.WELCOME_DEPLOYMENTS);
+
+        //set the war name and uuid into the text input and display the modal for editing
         input = $('#war_name');
+        console.log("element id is " + elem.id);
         input.data('uuid', elem.id);
         input.val($(elem).data('uuid_name'));
         $('#warNameModal').modal('show');
-        input.focus();
-//        alert(elem.id);
     }
+
     $(document).ready(function () {
         $("#warNameModal").on("hidden.bs.modal", function () {
-            // put your default event here
-            console.log("closing......");
+            polling.registerPolling(polling.pollEnum.WELCOME_DEPLOYMENTS, deployments_poll, 30000);
         });
     });
 </script>
