--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -61,22 +61,36 @@
             return false;
         }
 
-        // change the icon to the spinner and make the ajax call
-        $(btn).removeClass();
-        $(btn).addClass('fa fa-cog fa-spin fa-fw');
+        // if we are NOT starting an isaac db then see if there is a running dependency on komet
+        if (action !== 'start') {
+            if (app =~ /isaac/) {
+                console.log("elem is " + $(elem).data('war_uuid'));
 
-        //find all buttons in the div to add the prisme_processing class to so that the user cannot, for example, start and undeploy the app at the same time
-        var clean_id = 'div#' + tomcat_service_id.toString() + '-' + app.split('.').join('_') + ', i';
-        $(clean_id).addClass('processing');
+                $.getJSON(gon.routes.check_isaac_dependency_path, {uuid: $(elem).data('war_uuid]')}, function(data) {
+                    if (data.dependency !== false) {
+                        alert('There is a dependency on a running KOMET instance to this ISAAC instance. Are you sure ...' + data.dependency);
 
-        $.ajax({
-            url: gon.routes.welcome_tomcat_app_action_path,
-            type: 'GET',
-            data: {tomcat_service_id: tomcat_service_id, tomcat_action: action, tomcat_app: app},
-            success: function (data) {
-                $("#tp-deployments").html(data);
+
+                        // change the icon to the spinner and make the ajax call
+                        $(btn).removeClass();
+                        $(btn).addClass('fa fa-cog fa-spin fa-fw');
+
+                        //find all buttons in the div to add the prisme_processing class to so that the user cannot, for example, start and undeploy the app at the same time
+                        var clean_id = 'div#' + tomcat_service_id.toString() + '-' + app.split('.').join('_') + ', i';
+                        $(clean_id).addClass('processing');
+
+                        $.ajax({
+                            url: gon.routes.welcome_tomcat_app_action_path,
+                            type: 'GET',
+                            data: {tomcat_service_id: tomcat_service_id, tomcat_action: action, tomcat_app: app},
+                            success: function (data) {
+                                $("#tp-deployments").html(data);
+                            }
+                        });
+                    }
+                });
             }
-        });
+        }
     }
 
     $(document).ready(function () {
