--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -43,64 +43,78 @@
 </div>
 
 <script>
-    var awaiting_poll_results = false;
+  var awaiting_poll_results = false;
 
-    function deployments_poll() {
-        console.log('polling deployments...');
-        awaiting_poll_results = true;
-        $.get('<%= welcome_reload_deployments_path %>', {}, function (data) {
-            $('#tp-deployments').html(data);
-            awaiting_poll_results = false;
-        });
-    }
-
-    function tomcat_app(elem, tomcat_service_id, action, app) {
-        var btn = '#' + elem.id + ' > i';
-        if ($(btn).hasClass('processing')) {
-            console.log('stop clicking on the ' + action + ' button!!!!');
-            return false;
-        }
-
-        // if we are NOT starting an isaac db then see if there is a running dependency on komet
-        if (action !== 'start') {
-            if (app =~ /isaac/) {
-                console.log("elem is " + $(elem).data('war_uuid'));
-
-                $.getJSON(gon.routes.check_isaac_dependency_path, {uuid: $(elem).data('war_uuid]')}, function(data) {
-                    if (data.dependency !== false) {
-                        alert('There is a dependency on a running KOMET instance to this ISAAC instance. Are you sure ...' + data.dependency);
-
-
-                        // change the icon to the spinner and make the ajax call
-                        $(btn).removeClass();
-                        $(btn).addClass('fa fa-cog fa-spin fa-fw');
-
-                        //find all buttons in the div to add the prisme_processing class to so that the user cannot, for example, start and undeploy the app at the same time
-                        var clean_id = 'div#' + tomcat_service_id.toString() + '-' + app.split('.').join('_') + ', i';
-                        $(clean_id).addClass('processing');
-
-                        $.ajax({
-                            url: gon.routes.welcome_tomcat_app_action_path,
-                            type: 'GET',
-                            data: {tomcat_service_id: tomcat_service_id, tomcat_action: action, tomcat_app: app},
-                            success: function (data) {
-                                $("#tp-deployments").html(data);
-                            }
-                        });
-                    }
-                });
-            }
-        }
-    }
-
-    $(document).ready(function () {
-        $("#tabs").tabs();
-        <% if session[:select_tabpage] %>
-        $("#tabs").tabs("option", "active", <%= session[:select_tabpage] %>);
-        <% session.delete(:select_tabpage) %>
-        <% end %>
-
-        //register for polling
-        polling.registerPolling(polling.pollEnum.WELCOME_DEPLOYMENTS, deployments_poll, 30000);
+  function deployments_poll() {
+    console.log('polling deployments...');
+    awaiting_poll_results = true;
+    $.get('<%= welcome_reload_deployments_path %>', {}, function (data) {
+      $('#tp-deployments').html(data);
+      awaiting_poll_results = false;
     });
+  }
+
+  function tomcat_app(elem, tomcat_service_id, action, app) {
+    var btn = '#' + elem.id + ' > i';
+    if ($(btn).hasClass('processing')) {
+      console.log('stop clicking on the ' + action + ' button!!!!');
+      return false;
+    }
+    var war_uuid = $(elem).data('war_uuid');
+    console.log("elem is " + war_uuid);
+    console.log("app is " + app);
+    console.log("action is " + action);
+    var patt = new RegExp("isaac");
+    // if we are NOT starting an isaac db then see if there is a running dependency on komet
+    if ((action !== 'start') && (war_uuid !== undefined) && (patt.test(app))) {
+      //run the are you sure  check...(Do we have any komet dependencies?)
+      $.getJSON(gon.routes.check_isaac_dependency_path, {war_uuid: $(elem).data('war_uuid')}, function (data) {
+        if (data.dependency === true) {
+          bootbox.confirm({
+            size: 'small',
+            title: 'Warning!',
+            message: 'Are you sure you want to continue?<br><br> <strong>' + data.name + '</strong> has a dependency on this Isaac instance.',
+            callback: function (result) {
+              if (result) {
+                change_war_state(btn, tomcat_service_id, app, action, war_uuid)
+              }
+            }
+          });
+        } else {
+          change_war_state(btn, tomcat_service_id, app, action, war_uuid)
+        }
+      });
+      // change the icon to the spinner and make the ajax call
+    } else {
+      change_war_state(btn, tomcat_service_id, app, action, war_uuid)
+    }
+  }
+
+  function change_war_state(btn, tomcat_service_id, app, action, war_uuid) {
+    $(btn).removeClass();
+    $(btn).addClass('fa fa-cog fa-spin fa-fw');
+
+    //find all buttons in the div to add the prisme_processing class to so that the user cannot, for example, start and undeploy the app at the same time
+    var clean_id = 'div#' + tomcat_service_id.toString() + '-' + app.split('.').join('_') + ', i';
+    $(clean_id).addClass('processing');
+    $.ajax({
+      url: gon.routes.welcome_tomcat_app_action_path,
+      type: 'GET',
+      data: {tomcat_service_id: tomcat_service_id, tomcat_action: action, tomcat_app: app, war_uuid: war_uuid},
+      success: function (data) {
+        $("#tp-deployments").html(data);
+      }
+    });
+  }
+
+  $(document).ready(function () {
+    $("#tabs").tabs();
+    <% if session[:select_tabpage] %>
+    $("#tabs").tabs("option", "active", <%= session[:select_tabpage] %>);
+    <% session.delete(:select_tabpage) %>
+    <% end %>
+
+    //register for polling
+    polling.registerPolling(polling.pollEnum.WELCOME_DEPLOYMENTS, deployments_poll, 30000);
+  });
 </script>
