--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,1 @@
-Version:&nbsp;&nbsp;<%= PRISME_VERSION + ' - ' + PRISME_EVIRONMENT %>
+Version:&nbsp;&nbsp;<%= PRISME_VERSION + ' - ' + PRISME_ENVIRONMENT %>
