--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -33,7 +33,7 @@
         <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn_submit_form">Update User Roles</button>
         <h5 style="padding-top: 5px">User E-Mail/SSOI Login:&nbsp;<strong><span id="edit_user_info_span"></span></strong></h5>
       </div>
-      <div class="modal-body" style="overflow:auto; max-height: 70vh;"><!-- style is for scrollable div -->
+      <div class="modal-body scrollable_div">
         <%= form_tag(admin_user_edit_update_user_roles_path, id: 'user_edit_form') do %>
             <input type="hidden" name="user_id_to_edit" id="user_id_to_edit"/>
             <table class="prisme-table table-striped">
