--- a/app/views/checksum/_checksum_results_table.html.erb
+++ b/app/views/checksum/_checksum_results_table.html.erb
@@ -1,6 +1,9 @@
 <div class="result_hdr" style="border-left: 3px solid green; padding-left: 5px" ><%#= tbl_border_color %>
   <div style='background-color: transparent; height: 50px; padding: 5px;'>
-    <div style='float: left; color: black; font-weight: bold; font-size: 18px; padding-left: 5px' onclick="toggleResultTable(this)"><%= title %></div>
+    <div style='float: left; color: black; font-weight: bold; font-size: 18px; padding-left: 5px' onclick="toggleResultTable(this)">
+      <i class="fa fa-minus-square" aria-hidden="true"></i>
+      <%= title %>
+    </div>
   </div>
   <div class="result_table">
     <table class="prisme-table table-hover">
@@ -22,6 +25,10 @@
 </div>
 <script type="text/javascript" charset="utf-8">
 function toggleResultTable(elem) {
-    $(elem).closest('.result_hdr').find('.result_table').toggle();
+    var tbl = $(elem).closest('.result_hdr').find('.result_table');
+    tbl.toggle( "slow", function() {
+        var clazz = tbl.is(":visible") ? 'fa fa-minus-square' : 'fa fa-plus-square';
+        $(elem).find('.fa').removeClass().addClass(clazz);
+    });
 }
 </script>
