--- a/app/views/checksum/_checksum_results_table_rows.html.erb
+++ b/app/views/checksum/_checksum_results_table_rows.html.erb
@@ -1,6 +1,6 @@
 <% rows.each do |row| %>
-  <tr id="<%= "site_#{row[:site_id]}-subset_#{row[:subset_id]}-text_#{row[:subset_text]}" %>" style="background-color: <%= row[:striped] % 2 == 0 ? 'transparent' : '#f2f2f2;' %>">
-    <td><%= row[:site_name] %></td>
+  <tr id="<%= "#{row[:site_id]}|#{row[:subset_id]}|#{row[:subset_text]}" %>" style="background-color: <%= row[:striped] % 2 == 0 ? 'transparent' : '#f2f2f2;' %>">
+    <td><%= "#{row[:site_id]} - #{row[:site_name]}" %></td>
     <td><%= row[:subset_text] %></td>
     <td></td>
     <td></td>
