added helper method for setting the detail record to display;

--- a/app/views/checksum/_discovery_results.html.erb
+++ b/app/views/checksum/_discovery_results.html.erb
@@ -1,7 +1,8 @@
 <% if @checksum_results %>
     <% @checksum_results.each do |row| %>
-        <% row.checksum_details.each do |dtl| %>
-            <%= "#{row.subset_group} -> #{dtl.va_site.id} - #{dtl.va_site.name} :: #{dtl.subset} :: #{dtl.last_checksum}" %><br>
-        <% end %>
+        <%= render partial: 'greg', locals: {req: row} %>
+        <br>
+        <%= "#{row.subset_group}   Status: #{row.status}"%>
+        <br>
     <% end %>
 <% end %>
