added css for wait cursor and supporting javascript method; added a method and route to utilities controller in order to set the user's timezone offset in the session for formatting date displays; refactored checksum pages;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -267,6 +267,10 @@ html, body {
   padding: 5px;
 }
 
+body.wait, body.wait *{
+  cursor: wait !important;
+}
+
 .prisme-table tr:hover {
   cursor: pointer;
 }
