--- a/app/views/checksum/_discovery_results.html.erb
+++ b/app/views/checksum/_discovery_results.html.erb
@@ -1,5 +1,2 @@
-<% if @checksum_results %>
-    <% @checksum_results.each do |row| %>
-        <%= render partial: 'greg', locals: {req: row} %>
-    <% end %>
-<% end %>
+discovery tabpage
+
