Adding in deployment manager role.  Binding checksums to this role.

--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -117,10 +117,9 @@
                   </ul>
                 </td>
               </tr>
-<!--
               <tr>
                 <td width="30%">
-                  <%#= role_checkbox(Roles::MANAGER) %>
+                  <%= role_checkbox(Roles::DEPLOYMENT_MANAGER) %>
                 </td>
                 <td width="70%">
                   <p>The <strong>Manager</strong> role provides additional functionality to the Read Only role including:<br>
@@ -131,7 +130,6 @@
                   </ul>
                 </td>
               </tr>
--->
               </tbody>
             </table>
         <% end %>
